Add method to write a string to a file (like echo) Modify streamToFile to include option to append existing file instead of overwrite Redesign and reimplement TimedProcess to consume inputs, outputs, errors to prevent blocking and support redirection (Redirections is supported in JDK 1.7 API but unfortunately we cannot use it!)